--- a/src/main/resources/templates/pacientes.html
+++ b/src/main/resources/templates/pacientes.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="https://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Pacientes</title>
+    <title>Lista de Pacientes</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <h1>Lista de pacientes</h1>
-            <table class="table">
-                <thead class="table-dark table-striped table-bordered">
-                    <tr>
-                        <th>Nombre</th>
-                        <th>Edad</th>
-                        <th>RH</th>
-                        <th>Ultima cita</th>
-                        <th>Doctor</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="paciente : ${pacientes}">
-                        <td th:text="${paciente.nombre}">Nombre</td>
-                        <td th:text="${paciente.edad}">Edad</td>
-                        <td th:text="${paciente.tipoSangre}">RH</td>
-                        <td th:text="${#dates.format(paciente.ultimaCita, 'dd/MM/yyyy')}">Ultima cita</td>
-                        <td th:text="${paciente.doctor.nombre}">Doctor</td>
-                    </tr>
-                </tbody>
-              </table>
-        </div>
+<div class="container">
+    <h1>Lista de Pacientes</h1>
+    <div class="mb-3">
+        <a href="/pacientes/create" class="btn btn-primary"><i class="fas fa-plus"></i> Añadir Paciente</a>
     </div>
+    <table class="table">
+        <thead class="table-dark table-striped table-bordered">
+        <tr>
+            <th>Nombre</th>
+            <th>Edad</th>
+            <th>RH</th>
+            <th>Última Cita</th>
+            <th>Doctor</th>
+            <th>Acciones</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="paciente : ${pacientes}">
+            <td th:text="${paciente.nombre}">Nombre</td>
+            <td th:text="${paciente.edad}">Edad</td>
+            <td th:text="${paciente.tipoSangre}">RH</td>
+            <td th:text="${#dates.format(paciente.ultimaCita, 'dd/MM/yyyy')}">Última cita</td>
+            <td th:text="${paciente.doctor.nombre}">Doctor</td>
+            <td>
+                <a th:href="@{'/pacientes/edit/' + ${paciente.pacienteId}}" class="btn btn-primary">
+                    <i class="fas fa-pencil-alt"></i>
+                </a>
+                <form th:action="@{'/pacientes/delete/' + ${paciente.pacienteId}}" method="post" style="display: inline;">
+                    <button type="submit" class="btn btn-danger" onclick="return confirm('¿Estás seguro de eliminar este paciente?');">
+                        <i class="fas fa-trash-alt"></i>
+                    </button>
+                </form>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
