--- a/src/main/resources/templates/doctores.html
+++ b/src/main/resources/templates/doctores.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html lang="es"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Doctores</title>
+    <title>Lista de Doctores</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
-
+<div class="container mt-5">
+    <h1>Lista de Doctores</h1>
+    <div class="mb-3">
+        <a href="/doctores/create" class="btn btn-primary"><i class="fas fa-plus"></i> Añadir Doctor</a>
+    </div>
+    <table class="table">
+        <thead class="table-dark table-striped table-bordered">
+        <tr>
+            <th>Id</th>
+            <th>Nombre</th>
+            <th>Disponible</th>
+            <th>Acciones</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="doctor : ${doctores}">
+            <td th:text="${doctor.doctorId}">Id</td>
+            <td th:text="${doctor.nombre}">Nombre</td>
+            <td th:text="${doctor.disponible == 1 ? 'SI' : 'NO'}">Disponible</td>
+            <td>
+                <a th:href="@{'/doctores/edit/' + ${doctor.doctorId}}" class="btn btn-primary me-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Modificar doctor">
+                    <i class="fas fa-pencil-alt"></i>
+                </a>
+                <form th:action="@{'/doctores/delete/' + ${doctor.doctorId}}" method="post" style="display: inline;">
+                    <button type="submit" class="btn btn-danger me-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar doctor" onclick="return confirm('¿Estás seguro de eliminar este doctor?');">
+                        <i class="fas fa-trash-alt"></i>
+                    </button>
+                </form>
+                <a th:href="@{'/doctores/' + ${doctor.doctorId}}" class="btn btn-info me-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Ver detalles del doctor">
+                    <i class="bi bi-eye-fill"></i>
+                </a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
