--- a/src/main/resources/templates/pacientes.html
+++ b/src/main/resources/templates/pacientes.html
@@ -5,6 +5,7 @@
     <title>Lista de Pacientes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
 <div class="container">
@@ -15,6 +16,7 @@
     <table class="table">
         <thead class="table-dark table-striped table-bordered">
         <tr>
+            <th>Id</th>
             <th>Nombre</th>
             <th>Edad</th>
             <th>RH</th>
@@ -25,20 +27,24 @@
         </thead>
         <tbody>
         <tr th:each="paciente : ${pacientes}">
+            <td th:text="${paciente.pacienteId}">Id</td>
             <td th:text="${paciente.nombre}">Nombre</td>
             <td th:text="${paciente.edad}">Edad</td>
             <td th:text="${paciente.tipoSangre}">RH</td>
             <td th:text="${#dates.format(paciente.ultimaCita, 'dd/MM/yyyy')}">Última cita</td>
             <td th:text="${paciente.doctor.nombre}">Doctor</td>
             <td>
-                <a th:href="@{'/pacientes/edit/' + ${paciente.pacienteId}}" class="btn btn-primary">
+                <a th:href="@{'/pacientes/edit/' + ${paciente.pacienteId}}" class="btn btn-primary me-1"  data-bs-toggle="tooltip" data-bs-placement="top" title="modificar paciente">
                     <i class="fas fa-pencil-alt"></i>
                 </a>
                 <form th:action="@{'/pacientes/delete/' + ${paciente.pacienteId}}" method="post" style="display: inline;">
-                    <button type="submit" class="btn btn-danger" onclick="return confirm('¿Estás seguro de eliminar este paciente?');">
+                    <button type="submit" class="btn btn-danger me-1"  data-bs-toggle="tooltip" data-bs-placement="top" title="eliminar paciente" onclick="return confirm('¿Estás seguro de eliminar este paciente?');">
                         <i class="fas fa-trash-alt"></i>
                     </button>
                 </form>
+                <a th:href="@{'/pacientes/' + ${paciente.pacienteId}}" class="btn btn-info me-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Ver detalles del paciente">
+                    <i class="bi bi-eye-fill"></i>
+                </a>
             </td>
         </tr>
         </tbody>
